# google-play-mcp

./: .gitignore  LICENSE  pyproject.toml  server.py
src/google_play_mcp/: credentials.py  model.py  server.py
